--- a/views/layout/_share_comment.html
+++ b/views/layout/_share_comment.html
@@ -1,5 +1,8 @@
 <div class="card p-3" id="comment">
-    <div id="raty"  ></div>
+    <ul style="position:absolute;right:1rem">
+        <li id='rate-info' class="pb-1 clearfix"></li>
+        <li id="raty"></li>
+    </ul>
 
 
 
