--- a/views/layout/_share_comment.html
+++ b/views/layout/_share_comment.html
@@ -1,7 +1,7 @@
 <div class="card p-3" id="comment">
-    <ul style="position:absolute;right:1rem">
+    <ul style="position:absolute;right:1rem;z-index:999;">
         <li id='rate-info' class="pb-1 clearfix"></li>
-        <li id="raty"></li>
+        <li><div id="raty"></div></li>
     </ul>
 
 
