--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -22,5 +22,8 @@
                 'X-Xsrftoken': $('meta[name=_xsrf]').attr('content')
             }
         });
+        Object.defineProperty(navigator, 'userAgent', {
+            get: function () { return 'Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1'; }
+        });
     </script>
 </head>
