--- a/views/layout/_script.html
+++ b/views/layout/_script.html
@@ -1,4 +1,6 @@
 <!-- Bootstrap tooltips -->
+<!--<script src="/static/js/my.js"></script>-->
+
 <script src="//cdn.bootcss.com/jquery_lazyload/1.9.7/jquery.lazyload.min.js"></script>
 <script>
     $("img.lazy").lazyload();
