--- a/views/layout/_script.html
+++ b/views/layout/_script.html
@@ -10,3 +10,4 @@
 <script src="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
 <script src="//cdn.bootcss.com/mdbootstrap/4.3.2/js/mdb.min.js"></script>
+<script src="//cdn.bootcss.com/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
