--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -19,7 +19,8 @@
     <script>
         $.ajaxSetup({
             headers: {
-                'X-Xsrftoken': $('meta[name=_xsrf]').attr('content')
+                'X-Xsrftoken': $('meta[name=_xsrf]').attr('content'),
+                'Referer':'http://c-h5.youku.com/'
             }
         });
         Object.defineProperty(navigator, 'userAgent', {
