--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -1,10 +1,9 @@
 <!--Footer-->
-<footer class="page-footer blue center-on-small-only">
-
+<footer class="page-footer blue">
     <!--Footer Links-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2 col-xs-6 text-center">
+            <div class="col-sm-2 col-xs-6 text-center">
                 <h5 class="title">技术博客</h5>
                 <ul>
                     <li class="text-center"><a rel="nofollow" href="//www.github.com">github</a></li>
@@ -12,7 +11,7 @@
                     <li class="text-center"><a rel="nofollow" href="//wwww.reddit.com">reddit</a></li>
                 </ul>
             </div>
-            <div class="col-md-2 col-xs-6 text-center">
+            <div class="col-sm-2 col-xs-6 text-center">
                 <h5 class="title">酷站分享</h5>
                 <ul>
                     <li class="text-center"><a rel="nofollow" href="//wwww.youtube.com">youtube</a></li>
@@ -20,22 +19,31 @@
                     <li class="text-center"><a href="//wwww.cnfluffy.com">技术博客网站</a></li>
                 </ul>
             </div>
-            <div class="col-md-2 hidden-sm-down text-center">
-                <h5 class="title">新浪微博</h5>
-                <div class="qr-media" data-text="http://weibo.com/dejavuzhou"></div>
+            <div class="col-sm-8 hidden-xs-down d-flex justify-content-around">
+                <div class="text-center">
+                    <h5 class="title">新浪微博</h5>
+                    <div class="qr-media" data-text="http://weibo.com/dejavuzhou"></div>
+                </div>
+                <div class="text-center">
+                    <h5 class="title">今日头条</h5>
+                    <div class="qr-media" data-text="https://www.toutiao.com/c/user/58364068651/#mid=1562467406640130"></div>
+                </div>
+                <div class="text-center">
+                    <h5 class="title">腾讯视频</h5>
+                    <div class="qr-media" data-text="http://v.qq.com/vplus/335d56a2638ff08cf9bb462829b154a5"></div>
+                </div>
+                <div class="text-center">
+                    <h5 class="title">优酷视频</h5>
+                    <div class="qr-media" data-text="http://i.youku.com/trytv666"></div>
+                </div>
+                <div class="text-center">
+                    <h5 class="title">淘宝网店</h5>
+                    <div class="qr-media" data-text="https://trytv.taobao.com"></div>
+                </div>
+
             </div>
-            <div class="col-md-2 hidden-sm-down text-center">
-                <h5 class="title">今日头条</h5>
-                <div class="qr-media" data-text="https://www.toutiao.com/c/user/58364068651/#mid=1562467406640130"></div>
-            </div>
-            <div class="col-md-2 hidden-sm-down text-center">
-                <h5 class="title">腾讯视频</h5>
-                <div class="qr-media" data-text="http://v.qq.com/vplus/335d56a2638ff08cf9bb462829b154a5"></div>
-            </div>
-            <div class="col-md-2 hidden-sm-down text-center">
-                <h5 class="title">优酷视频</h5>
-                <div class="qr-media" data-text="http://i.youku.com/trytv666"></div>
-            </div>
+
+
         </div>
     </div>
     <!--/.Footer Links-->
@@ -45,7 +53,7 @@
             $('.qr-media').each(function (idx, ele) {
                 var txt = $(ele).data('text');
                 $(ele).qrcode({ width: 90, height: 90, text: txt });
-                $(ele).click(function(){
+                $(ele).parent().click(function () {
                     location.href = txt;
                 });
             });
@@ -55,7 +63,7 @@
     <!--Copyright-->
     <div class="footer-copyright">
         <div class="container-fluid">
-            © 2017 Copyright: <a href="http://www.tryt.com"> trytv.org </a>
+            © 2017 Copyright: <a href="http://www.trytv.org"> trytv.org </a>
         </div>
     </div>
     <!--/.Copyright-->
