--- a/views/layout/_share_comment.html
+++ b/views/layout/_share_comment.html
@@ -1,19 +1,18 @@
 <div class="card p-3" id="comment">
-    <ul style="position:absolute;right:1rem;z-index:999;">
-        <li id='rate-info' class="pb-1 clearfix"></li>
-        <li><div id="raty"></div></li>
-    </ul>
 
-
-
-    <div class="jiathis_style_32x32">
-        <a class="jiathis_button_tsina"></a>
-        <a class="jiathis_button_qzone"></a>
-        <a class="jiathis_button_weixin"></a>
-        <a class="jiathis_button_cqq"></a>
-        <a href="//www.jiathis.com/share?uid=2088157" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
-        <a class="jiathis_counter_style"></a>
+    <div class="d-flex justify-content-between mb-1">
+        <div class="jiathis_style_32x32">
+            <a class="jiathis_button_tsina"></a>
+            <a class="jiathis_button_qzone"></a>
+            <a class="jiathis_button_weixin"></a>
+            <a class="jiathis_button_cqq"></a>
+            <a href="//www.jiathis.com/share?uid=2088157" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
+            <a class="jiathis_counter_style"></a>
+        </div>
+        <div id='rate-info'></div>
     </div>
+    <div id="raty"></div>
+
     <!-- JiaThis Button BEGIN -->
     <script type="text/javascript">
         var jiathis_config = { data_track_clickback: 'true' };
